--- a/src/assets/styles/_busquedaCliente.css
+++ b/src/assets/styles/_busquedaCliente.css
@@ -26,3 +26,33 @@
 .busqueda-activa {
     border-bottom: solid #00915c !important;
 }
+
+.mt-85 {
+    margin-top: 85px;
+}
+
+.buscador-contenido {
+    margin-top: 38px;
+}
+
+.pad-extra {
+    padding: 0px 70px;
+}
+
+.contenedor-cliente {
+    border: solid 0.5px #F8F8F8;
+    display: flex;
+}
+
+.contenedor-cliente > div:nth-child(1) {
+    width: 350px;
+}
+
+.pad-extra-cliente {
+    padding: 4.5px 70px;
+}
+
+.scroll-buscador {
+    overflow-y: scroll;
+    height: 99px;
+}
