--- a/src/assets/styles/_titulos.css
+++ b/src/assets/styles/_titulos.css
@@ -2,3 +2,13 @@
     font-size: 20px;
     font-family: 'AvenirNextLTPro-Medium';
 }
+
+.titulo {
+    font-size: 26px;
+    font-family: 'AvenirNextLTPro-Medium';
+}
+
+.titulo-contenido {
+    font-size: 18px;
+    font-family: 'AvenirNextLTPro-Medium';
+}
