--- a/src/assets/styles/_utilidades.css
+++ b/src/assets/styles/_utilidades.css
@@ -749,6 +749,12 @@ input.u-desac {
 .u-fz-23 {
     font-size: 23px;
 }
+.u-fz-24 {
+    font-size: 24px;
+}
+.u-fz-25 {
+    font-size: 25px;
+}
 
 .u-txt-verde {
     color: #006341;
