--- a/src/assets/styles/_input.css
+++ b/src/assets/styles/_input.css
@@ -69,6 +69,21 @@
     color: #787878;
 }
 
+.input-bracket__input-2{
+    border: none;
+    font-size: 20px;
+    font-family: 'Avenir_Next_Regular';
+    width: 100%;
+}
+
+.input-bracket__input-2:focus{
+    outline: none;
+}
+
+.input-bracket__input-2::placeholder{
+    color: #787878;
+}
+
 .input-bracket__ico{
     width: 1.5rem;
     cursor: pointer;
